--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,10 @@
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/toolbar1"
@@ -46,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/btnSelectImage"
             android:layout_marginBottom="20dp"
-            android:text="Select Downloads Image" />
+            android:text="Process Guess" />
 
         <EditText
             android:id="@+id/insertText"
@@ -54,14 +57,15 @@
             android:layout_height="50dp"
             android:layout_below="@id/btnSelectImage2"
             android:gravity="center"
-            android:text="Text here" />
+            android:hint="Guess" />
 
 
         <ImageView
             android:id="@+id/imgView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200px"
+            android:layout_height="200px"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp" />
 
 
